// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`control.calendar scrolling 1`] = `"January 2022: 27,28,29,30,31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5,6"`;

exports[`control.calendar scrolling 2`] = `"February 2022: 31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,1,2,3,4,5,6,7,8,9,10,11,12,13"`;

exports[`control.calendar scrolling 3`] = `"March 2022: 28,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5,6,7,8,9,10"`;

exports[`control.calendar scrolling 4`] = `"April 2022: 28,29,30,31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,1,2,3,4,5,6,7,8"`;

exports[`control.calendar scrolling 5`] = `"May 2022: 25,26,27,28,29,30,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5"`;

exports[`control.calendar scrolling 6`] = `"June 2022: 30,31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,1,2,3,4,5,6,7,8,9,10"`;

exports[`control.calendar scrolling 7`] = `"July 2022: 27,28,29,30,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5,6,7"`;

exports[`control.calendar scrolling 8`] = `"August 2022: 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5,6,7,8,9,10,11"`;

exports[`control.calendar scrolling 9`] = `"September 2022: 29,30,31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,1,2,3,4,5,6,7,8,9"`;

exports[`control.calendar scrolling 10`] = `"October 2022: 26,27,28,29,30,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5,6"`;

exports[`control.calendar scrolling 11`] = `"November 2022: 31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,1,2,3,4,5,6,7,8,9,10,11"`;

exports[`control.calendar scrolling 12`] = `"December 2022: 28,29,30,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5,6,7,8"`;

exports[`control.calendar scrolling 13`] = `"December 2022: 28,29,30,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5,6,7,8"`;

exports[`control.calendar scrolling 14`] = `"November 2022: 31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,1,2,3,4,5,6,7,8,9,10,11"`;

exports[`control.calendar scrolling 15`] = `"October 2022: 26,27,28,29,30,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5,6"`;

exports[`control.calendar scrolling 16`] = `"September 2022: 29,30,31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,1,2,3,4,5,6,7,8,9"`;

exports[`control.calendar scrolling 17`] = `"August 2022: 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5,6,7,8,9,10,11"`;

exports[`control.calendar scrolling 18`] = `"July 2022: 27,28,29,30,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5,6,7"`;

exports[`control.calendar scrolling 19`] = `"June 2022: 30,31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,1,2,3,4,5,6,7,8,9,10"`;

exports[`control.calendar scrolling 20`] = `"May 2022: 25,26,27,28,29,30,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5"`;

exports[`control.calendar scrolling 21`] = `"April 2022: 28,29,30,31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,1,2,3,4,5,6,7,8"`;

exports[`control.calendar scrolling 22`] = `"March 2022: 28,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5,6,7,8,9,10"`;

exports[`control.calendar scrolling 23`] = `"February 2022: 31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,1,2,3,4,5,6,7,8,9,10,11,12,13"`;

exports[`control.calendar scrolling 24`] = `"2022: Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec,Jan,Feb,Mar,Apr"`;

exports[`control.calendar scrolling 25`] = `"2023: Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec,Jan,Feb,Mar,Apr"`;

exports[`control.calendar scrolling 26`] = `"2024: Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec,Jan,Feb,Mar,Apr"`;

exports[`control.calendar scrolling 27`] = `"2025: Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec,Jan,Feb,Mar,Apr"`;

exports[`control.calendar scrolling 28`] = `"2025: Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec,Jan,Feb,Mar,Apr"`;

exports[`control.calendar scrolling 29`] = `"2024: Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec,Jan,Feb,Mar,Apr"`;

exports[`control.calendar scrolling 30`] = `"2023: Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec,Jan,Feb,Mar,Apr"`;

exports[`control.calendar scrolling 31`] = `"2022: Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec,Jan,Feb,Mar,Apr"`;

exports[`control.calendar scrolling 32`] = `"2018 ... 2033: 2018,2019,2020,2021,2022,2023,2024,2025,2026,2027,2028,2029,2030,2031,2032,2033"`;

exports[`control.calendar scrolling 33`] = `"2034 ... 2049: 2034,2035,2036,2037,2038,2039,2040,2041,2042,2043,2044,2045,2046,2047,2048,2049"`;

exports[`control.calendar scrolling 34`] = `"2050 ... 2065: 2050,2051,2052,2053,2054,2055,2056,2057,2058,2059,2060,2061,2062,2063,2064,2065"`;

exports[`control.calendar scrolling 35`] = `"2066 ... 2081: 2066,2067,2068,2069,2070,2071,2072,2073,2074,2075,2076,2077,2078,2079,2080,2081"`;

exports[`control.calendar scrolling 36`] = `"2066 ... 2081: 2066,2067,2068,2069,2070,2071,2072,2073,2074,2075,2076,2077,2078,2079,2080,2081"`;

exports[`control.calendar scrolling 37`] = `"2050 ... 2065: 2050,2051,2052,2053,2054,2055,2056,2057,2058,2059,2060,2061,2062,2063,2064,2065"`;

exports[`control.calendar scrolling 38`] = `"2034 ... 2049: 2034,2035,2036,2037,2038,2039,2040,2041,2042,2043,2044,2045,2046,2047,2048,2049"`;

exports[`control.calendar scrolling 39`] = `"2018 ... 2033: 2018,2019,2020,2021,2022,2023,2024,2025,2026,2027,2028,2029,2030,2031,2032,2033"`;

exports[`control.calendar scrolling 40`] = `"April 2020: 30,31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,1,2,3,4,5,6,7,8,9,10"`;

exports[`control.calendar scrolling 41`] = `"March 2020: 24,25,26,27,28,29,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,1,2,3,4,5"`;

exports[`control.calendar utc=false day picker firstOfWeek: Monday 1`] = `
<wup-calendar>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-controls="txt2"
        aria-owns="txt2"
        aria-readonly="false"
        autocomplete="off"
        id="txt1"
        readonly=""
        role="combobox"
        type="text"
      />
      <strong
        class="wup-hidden"
      />
    </span>
  </label>
  <div
    calendar="day"
    id="txt2"
  >
    <header>
      <button
        aria-hidden="true"
        tabindex="-1"
      >
        December 2022
      </button>
    </header>
    <div>
      <div>
        <ul
          aria-hidden="true"
        >
          <li>
            Mo
          </li>
          <li>
            Tu
          </li>
          <li>
            We
          </li>
          <li>
            Th
          </li>
          <li>
            Fr
          </li>
          <li>
            Sa
          </li>
          <li>
            Su
          </li>
        </ul>
        <ol
          role="grid"
          style="overflow: hidden;"
        >
          <li
            prev=""
            role="gridcell"
          >
            28
          </li>
          <li
            prev=""
            role="gridcell"
          >
            29
          </li>
          <li
            prev=""
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            1
          </li>
          <li
            role="gridcell"
          >
            2
          </li>
          <li
            role="gridcell"
          >
            3
          </li>
          <li
            role="gridcell"
          >
            4
          </li>
          <li
            aria-selected="true"
            role="gridcell"
          >
            5
          </li>
          <li
            role="gridcell"
          >
            6
          </li>
          <li
            role="gridcell"
          >
            7
          </li>
          <li
            role="gridcell"
          >
            8
          </li>
          <li
            role="gridcell"
          >
            9
          </li>
          <li
            role="gridcell"
          >
            10
          </li>
          <li
            role="gridcell"
          >
            11
          </li>
          <li
            role="gridcell"
          >
            12
          </li>
          <li
            role="gridcell"
          >
            13
          </li>
          <li
            role="gridcell"
          >
            14
          </li>
          <li
            role="gridcell"
          >
            15
          </li>
          <li
            aria-current="date"
            role="gridcell"
          >
            16
          </li>
          <li
            role="gridcell"
          >
            17
          </li>
          <li
            role="gridcell"
          >
            18
          </li>
          <li
            role="gridcell"
          >
            19
          </li>
          <li
            role="gridcell"
          >
            20
          </li>
          <li
            role="gridcell"
          >
            21
          </li>
          <li
            role="gridcell"
          >
            22
          </li>
          <li
            role="gridcell"
          >
            23
          </li>
          <li
            role="gridcell"
          >
            24
          </li>
          <li
            role="gridcell"
          >
            25
          </li>
          <li
            role="gridcell"
          >
            26
          </li>
          <li
            role="gridcell"
          >
            27
          </li>
          <li
            role="gridcell"
          >
            28
          </li>
          <li
            role="gridcell"
          >
            29
          </li>
          <li
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            31
          </li>
          <li
            next=""
            role="gridcell"
          >
            1
          </li>
          <li
            next=""
            role="gridcell"
          >
            2
          </li>
          <li
            next=""
            role="gridcell"
          >
            3
          </li>
          <li
            next=""
            role="gridcell"
          >
            4
          </li>
          <li
            next=""
            role="gridcell"
          >
            5
          </li>
          <li
            next=""
            role="gridcell"
          >
            6
          </li>
          <li
            next=""
            role="gridcell"
          >
            7
          </li>
          <li
            next=""
            role="gridcell"
          >
            8
          </li>
        </ol>
      </div>
    </div>
  </div>
</wup-calendar>
`;

exports[`control.calendar utc=false day picker firstOfWeek: Sunday 1`] = `
<wup-calendar>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-controls="txt2"
        aria-owns="txt2"
        aria-readonly="false"
        autocomplete="off"
        id="txt1"
        readonly=""
        role="combobox"
        type="text"
      />
      <strong
        class="wup-hidden"
      />
    </span>
  </label>
  <div
    calendar="day"
    id="txt2"
  >
    <header>
      <button
        aria-hidden="true"
        tabindex="-1"
      >
        December 2022
      </button>
    </header>
    <div>
      <div>
        <ul
          aria-hidden="true"
        >
          <li>
            Su
          </li>
          <li>
            Mo
          </li>
          <li>
            Tu
          </li>
          <li>
            We
          </li>
          <li>
            Th
          </li>
          <li>
            Fr
          </li>
          <li>
            Sa
          </li>
        </ul>
        <ol
          role="grid"
          style="overflow: hidden;"
        >
          <li
            prev=""
            role="gridcell"
          >
            27
          </li>
          <li
            prev=""
            role="gridcell"
          >
            28
          </li>
          <li
            prev=""
            role="gridcell"
          >
            29
          </li>
          <li
            prev=""
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            1
          </li>
          <li
            role="gridcell"
          >
            2
          </li>
          <li
            role="gridcell"
          >
            3
          </li>
          <li
            role="gridcell"
          >
            4
          </li>
          <li
            aria-selected="true"
            role="gridcell"
          >
            5
          </li>
          <li
            role="gridcell"
          >
            6
          </li>
          <li
            role="gridcell"
          >
            7
          </li>
          <li
            role="gridcell"
          >
            8
          </li>
          <li
            role="gridcell"
          >
            9
          </li>
          <li
            role="gridcell"
          >
            10
          </li>
          <li
            role="gridcell"
          >
            11
          </li>
          <li
            role="gridcell"
          >
            12
          </li>
          <li
            role="gridcell"
          >
            13
          </li>
          <li
            role="gridcell"
          >
            14
          </li>
          <li
            role="gridcell"
          >
            15
          </li>
          <li
            aria-current="date"
            role="gridcell"
          >
            16
          </li>
          <li
            role="gridcell"
          >
            17
          </li>
          <li
            role="gridcell"
          >
            18
          </li>
          <li
            role="gridcell"
          >
            19
          </li>
          <li
            role="gridcell"
          >
            20
          </li>
          <li
            role="gridcell"
          >
            21
          </li>
          <li
            role="gridcell"
          >
            22
          </li>
          <li
            role="gridcell"
          >
            23
          </li>
          <li
            role="gridcell"
          >
            24
          </li>
          <li
            role="gridcell"
          >
            25
          </li>
          <li
            role="gridcell"
          >
            26
          </li>
          <li
            role="gridcell"
          >
            27
          </li>
          <li
            role="gridcell"
          >
            28
          </li>
          <li
            role="gridcell"
          >
            29
          </li>
          <li
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            31
          </li>
          <li
            next=""
            role="gridcell"
          >
            1
          </li>
          <li
            next=""
            role="gridcell"
          >
            2
          </li>
          <li
            next=""
            role="gridcell"
          >
            3
          </li>
          <li
            next=""
            role="gridcell"
          >
            4
          </li>
          <li
            next=""
            role="gridcell"
          >
            5
          </li>
          <li
            next=""
            role="gridcell"
          >
            6
          </li>
          <li
            next=""
            role="gridcell"
          >
            7
          </li>
        </ol>
      </div>
    </div>
  </div>
</wup-calendar>
`;

exports[`control.calendar utc=false day picker firstOfWeek: Tuesday 1`] = `
<wup-calendar>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-controls="txt2"
        aria-owns="txt2"
        aria-readonly="false"
        autocomplete="off"
        id="txt1"
        readonly=""
        role="combobox"
        type="text"
      />
      <strong
        class="wup-hidden"
      />
    </span>
  </label>
  <div
    calendar="day"
    id="txt2"
  >
    <header>
      <button
        aria-hidden="true"
        tabindex="-1"
      >
        December 2022
      </button>
    </header>
    <div>
      <div>
        <ul
          aria-hidden="true"
        >
          <li>
            Tu
          </li>
          <li>
            We
          </li>
          <li>
            Th
          </li>
          <li>
            Fr
          </li>
          <li>
            Sa
          </li>
          <li>
            Su
          </li>
          <li>
            Mo
          </li>
        </ul>
        <ol
          role="grid"
          style="overflow: hidden;"
        >
          <li
            prev=""
            role="gridcell"
          >
            29
          </li>
          <li
            prev=""
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            1
          </li>
          <li
            role="gridcell"
          >
            2
          </li>
          <li
            role="gridcell"
          >
            3
          </li>
          <li
            role="gridcell"
          >
            4
          </li>
          <li
            aria-selected="true"
            role="gridcell"
          >
            5
          </li>
          <li
            role="gridcell"
          >
            6
          </li>
          <li
            role="gridcell"
          >
            7
          </li>
          <li
            role="gridcell"
          >
            8
          </li>
          <li
            role="gridcell"
          >
            9
          </li>
          <li
            role="gridcell"
          >
            10
          </li>
          <li
            role="gridcell"
          >
            11
          </li>
          <li
            role="gridcell"
          >
            12
          </li>
          <li
            role="gridcell"
          >
            13
          </li>
          <li
            role="gridcell"
          >
            14
          </li>
          <li
            role="gridcell"
          >
            15
          </li>
          <li
            aria-current="date"
            role="gridcell"
          >
            16
          </li>
          <li
            role="gridcell"
          >
            17
          </li>
          <li
            role="gridcell"
          >
            18
          </li>
          <li
            role="gridcell"
          >
            19
          </li>
          <li
            role="gridcell"
          >
            20
          </li>
          <li
            role="gridcell"
          >
            21
          </li>
          <li
            role="gridcell"
          >
            22
          </li>
          <li
            role="gridcell"
          >
            23
          </li>
          <li
            role="gridcell"
          >
            24
          </li>
          <li
            role="gridcell"
          >
            25
          </li>
          <li
            role="gridcell"
          >
            26
          </li>
          <li
            role="gridcell"
          >
            27
          </li>
          <li
            role="gridcell"
          >
            28
          </li>
          <li
            role="gridcell"
          >
            29
          </li>
          <li
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            31
          </li>
          <li
            next=""
            role="gridcell"
          >
            1
          </li>
          <li
            next=""
            role="gridcell"
          >
            2
          </li>
          <li
            next=""
            role="gridcell"
          >
            3
          </li>
          <li
            next=""
            role="gridcell"
          >
            4
          </li>
          <li
            next=""
            role="gridcell"
          >
            5
          </li>
          <li
            next=""
            role="gridcell"
          >
            6
          </li>
          <li
            next=""
            role="gridcell"
          >
            7
          </li>
          <li
            next=""
            role="gridcell"
          >
            8
          </li>
          <li
            next=""
            role="gridcell"
          >
            9
          </li>
        </ol>
      </div>
    </div>
  </div>
</wup-calendar>
`;

exports[`control.calendar utc=false month picker 1`] = `
<div
  calendar="month"
  id="txt2"
>
  <header>
    <button
      aria-hidden="true"
      tabindex="-1"
    >
      2022
    </button>
  </header>
  <div>
    <div>
      <ol
        role="grid"
        style="overflow: hidden;"
      >
        <li
          role="gridcell"
        >
          Jan
        </li>
        <li
          role="gridcell"
        >
          Feb
        </li>
        <li
          role="gridcell"
        >
          Mar
        </li>
        <li
          role="gridcell"
        >
          Apr
        </li>
        <li
          role="gridcell"
        >
          May
        </li>
        <li
          role="gridcell"
        >
          Jun
        </li>
        <li
          role="gridcell"
        >
          Jul
        </li>
        <li
          role="gridcell"
        >
          Aug
        </li>
        <li
          role="gridcell"
        >
          Sep
        </li>
        <li
          role="gridcell"
        >
          Oct
        </li>
        <li
          role="gridcell"
        >
          Nov
        </li>
        <li
          aria-current="date"
          aria-selected="true"
          role="gridcell"
        >
          Dec
        </li>
        <li
          next=""
          role="gridcell"
        >
          Jan
        </li>
        <li
          next=""
          role="gridcell"
        >
          Feb
        </li>
        <li
          next=""
          role="gridcell"
        >
          Mar
        </li>
        <li
          next=""
          role="gridcell"
        >
          Apr
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`control.calendar utc=false options min/max 1`] = `
[
  "26 disabled",
  "27 disabled",
  "28 disabled",
  "29 disabled",
  "30",
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "13",
  "14",
  "15",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "1",
  "2 disabled",
  "3 disabled",
  "4 disabled",
  "5 disabled",
  "6 disabled",
]
`;

exports[`control.calendar utc=false options min/max 2`] = `
[
  "31",
  "1",
  "2 disabled",
  "3 disabled",
  "4 disabled",
  "5 disabled",
  "6 disabled",
  "7 disabled",
  "8 disabled",
  "9 disabled",
  "10 disabled",
  "11 disabled",
  "12 disabled",
  "13 disabled",
  "14 disabled",
  "15 disabled",
  "16 disabled",
  "17 disabled",
  "18 disabled",
  "19 disabled",
  "20 disabled",
  "21 disabled",
  "22 disabled",
  "23 disabled",
  "24 disabled",
  "25 disabled",
  "26 disabled",
  "27 disabled",
  "28 disabled",
  "29 disabled",
  "30 disabled",
  "1 disabled",
  "2 disabled",
  "3 disabled",
  "4 disabled",
  "5 disabled",
  "6 disabled",
  "7 disabled",
  "8 disabled",
  "9 disabled",
  "10 disabled",
  "11 disabled",
]
`;

exports[`control.calendar utc=false options min/max 3`] = `
[
  "29 disabled",
  "30 disabled",
  "31 disabled",
  "1 disabled",
  "2 disabled",
  "3 disabled",
  "4 disabled",
  "5 disabled",
  "6 disabled",
  "7 disabled",
  "8 disabled",
  "9 disabled",
  "10 disabled",
  "11 disabled",
  "12 disabled",
  "13 disabled",
  "14 disabled",
  "15 disabled",
  "16 disabled",
  "17 disabled",
  "18 disabled",
  "19 disabled",
  "20 disabled",
  "21 disabled",
  "22 disabled",
  "23 disabled",
  "24 disabled",
  "25 disabled",
  "26 disabled",
  "27 disabled",
  "28 disabled",
  "29 disabled",
  "30",
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
]
`;

exports[`control.calendar utc=false year picker 1`] = `
<div
  calendar="year"
  id="txt2"
>
  <header>
    <button
      aria-hidden="true"
      disabled=""
      tabindex="-1"
    >
      2018 ... 2033
    </button>
  </header>
  <div>
    <div>
      <ol
        role="grid"
        style="overflow: hidden;"
      >
        <li
          aria-current="date"
          aria-selected="true"
          role="gridcell"
        >
          2018
        </li>
        <li
          role="gridcell"
        >
          2019
        </li>
        <li
          role="gridcell"
        >
          2020
        </li>
        <li
          role="gridcell"
        >
          2021
        </li>
        <li
          role="gridcell"
        >
          2022
        </li>
        <li
          role="gridcell"
        >
          2023
        </li>
        <li
          role="gridcell"
        >
          2024
        </li>
        <li
          role="gridcell"
        >
          2025
        </li>
        <li
          role="gridcell"
        >
          2026
        </li>
        <li
          role="gridcell"
        >
          2027
        </li>
        <li
          role="gridcell"
        >
          2028
        </li>
        <li
          role="gridcell"
        >
          2029
        </li>
        <li
          role="gridcell"
        >
          2030
        </li>
        <li
          role="gridcell"
        >
          2031
        </li>
        <li
          role="gridcell"
        >
          2032
        </li>
        <li
          role="gridcell"
        >
          2033
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`control.calendar utc=true day picker firstOfWeek: Monday 1`] = `
<wup-calendar>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-controls="txt2"
        aria-owns="txt2"
        aria-readonly="false"
        autocomplete="off"
        id="txt1"
        readonly=""
        role="combobox"
        type="text"
      />
      <strong
        class="wup-hidden"
      />
    </span>
  </label>
  <div
    calendar="day"
    id="txt2"
  >
    <header>
      <button
        aria-hidden="true"
        tabindex="-1"
      >
        December 2022
      </button>
    </header>
    <div>
      <div>
        <ul
          aria-hidden="true"
        >
          <li>
            Mo
          </li>
          <li>
            Tu
          </li>
          <li>
            We
          </li>
          <li>
            Th
          </li>
          <li>
            Fr
          </li>
          <li>
            Sa
          </li>
          <li>
            Su
          </li>
        </ul>
        <ol
          role="grid"
          style="overflow: hidden;"
        >
          <li
            prev=""
            role="gridcell"
          >
            28
          </li>
          <li
            prev=""
            role="gridcell"
          >
            29
          </li>
          <li
            prev=""
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            1
          </li>
          <li
            role="gridcell"
          >
            2
          </li>
          <li
            role="gridcell"
          >
            3
          </li>
          <li
            role="gridcell"
          >
            4
          </li>
          <li
            aria-selected="true"
            role="gridcell"
          >
            5
          </li>
          <li
            role="gridcell"
          >
            6
          </li>
          <li
            role="gridcell"
          >
            7
          </li>
          <li
            role="gridcell"
          >
            8
          </li>
          <li
            role="gridcell"
          >
            9
          </li>
          <li
            role="gridcell"
          >
            10
          </li>
          <li
            role="gridcell"
          >
            11
          </li>
          <li
            role="gridcell"
          >
            12
          </li>
          <li
            role="gridcell"
          >
            13
          </li>
          <li
            role="gridcell"
          >
            14
          </li>
          <li
            role="gridcell"
          >
            15
          </li>
          <li
            aria-current="date"
            role="gridcell"
          >
            16
          </li>
          <li
            role="gridcell"
          >
            17
          </li>
          <li
            role="gridcell"
          >
            18
          </li>
          <li
            role="gridcell"
          >
            19
          </li>
          <li
            role="gridcell"
          >
            20
          </li>
          <li
            role="gridcell"
          >
            21
          </li>
          <li
            role="gridcell"
          >
            22
          </li>
          <li
            role="gridcell"
          >
            23
          </li>
          <li
            role="gridcell"
          >
            24
          </li>
          <li
            role="gridcell"
          >
            25
          </li>
          <li
            role="gridcell"
          >
            26
          </li>
          <li
            role="gridcell"
          >
            27
          </li>
          <li
            role="gridcell"
          >
            28
          </li>
          <li
            role="gridcell"
          >
            29
          </li>
          <li
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            31
          </li>
          <li
            next=""
            role="gridcell"
          >
            1
          </li>
          <li
            next=""
            role="gridcell"
          >
            2
          </li>
          <li
            next=""
            role="gridcell"
          >
            3
          </li>
          <li
            next=""
            role="gridcell"
          >
            4
          </li>
          <li
            next=""
            role="gridcell"
          >
            5
          </li>
          <li
            next=""
            role="gridcell"
          >
            6
          </li>
          <li
            next=""
            role="gridcell"
          >
            7
          </li>
          <li
            next=""
            role="gridcell"
          >
            8
          </li>
        </ol>
      </div>
    </div>
  </div>
</wup-calendar>
`;

exports[`control.calendar utc=true day picker firstOfWeek: Sunday 1`] = `
<wup-calendar>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-controls="txt2"
        aria-owns="txt2"
        aria-readonly="false"
        autocomplete="off"
        id="txt1"
        readonly=""
        role="combobox"
        type="text"
      />
      <strong
        class="wup-hidden"
      />
    </span>
  </label>
  <div
    calendar="day"
    id="txt2"
  >
    <header>
      <button
        aria-hidden="true"
        tabindex="-1"
      >
        December 2022
      </button>
    </header>
    <div>
      <div>
        <ul
          aria-hidden="true"
        >
          <li>
            Su
          </li>
          <li>
            Mo
          </li>
          <li>
            Tu
          </li>
          <li>
            We
          </li>
          <li>
            Th
          </li>
          <li>
            Fr
          </li>
          <li>
            Sa
          </li>
        </ul>
        <ol
          role="grid"
          style="overflow: hidden;"
        >
          <li
            prev=""
            role="gridcell"
          >
            27
          </li>
          <li
            prev=""
            role="gridcell"
          >
            28
          </li>
          <li
            prev=""
            role="gridcell"
          >
            29
          </li>
          <li
            prev=""
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            1
          </li>
          <li
            role="gridcell"
          >
            2
          </li>
          <li
            role="gridcell"
          >
            3
          </li>
          <li
            role="gridcell"
          >
            4
          </li>
          <li
            aria-selected="true"
            role="gridcell"
          >
            5
          </li>
          <li
            role="gridcell"
          >
            6
          </li>
          <li
            role="gridcell"
          >
            7
          </li>
          <li
            role="gridcell"
          >
            8
          </li>
          <li
            role="gridcell"
          >
            9
          </li>
          <li
            role="gridcell"
          >
            10
          </li>
          <li
            role="gridcell"
          >
            11
          </li>
          <li
            role="gridcell"
          >
            12
          </li>
          <li
            role="gridcell"
          >
            13
          </li>
          <li
            role="gridcell"
          >
            14
          </li>
          <li
            role="gridcell"
          >
            15
          </li>
          <li
            aria-current="date"
            role="gridcell"
          >
            16
          </li>
          <li
            role="gridcell"
          >
            17
          </li>
          <li
            role="gridcell"
          >
            18
          </li>
          <li
            role="gridcell"
          >
            19
          </li>
          <li
            role="gridcell"
          >
            20
          </li>
          <li
            role="gridcell"
          >
            21
          </li>
          <li
            role="gridcell"
          >
            22
          </li>
          <li
            role="gridcell"
          >
            23
          </li>
          <li
            role="gridcell"
          >
            24
          </li>
          <li
            role="gridcell"
          >
            25
          </li>
          <li
            role="gridcell"
          >
            26
          </li>
          <li
            role="gridcell"
          >
            27
          </li>
          <li
            role="gridcell"
          >
            28
          </li>
          <li
            role="gridcell"
          >
            29
          </li>
          <li
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            31
          </li>
          <li
            next=""
            role="gridcell"
          >
            1
          </li>
          <li
            next=""
            role="gridcell"
          >
            2
          </li>
          <li
            next=""
            role="gridcell"
          >
            3
          </li>
          <li
            next=""
            role="gridcell"
          >
            4
          </li>
          <li
            next=""
            role="gridcell"
          >
            5
          </li>
          <li
            next=""
            role="gridcell"
          >
            6
          </li>
          <li
            next=""
            role="gridcell"
          >
            7
          </li>
        </ol>
      </div>
    </div>
  </div>
</wup-calendar>
`;

exports[`control.calendar utc=true day picker firstOfWeek: Tuesday 1`] = `
<wup-calendar>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-controls="txt2"
        aria-owns="txt2"
        aria-readonly="false"
        autocomplete="off"
        id="txt1"
        readonly=""
        role="combobox"
        type="text"
      />
      <strong
        class="wup-hidden"
      />
    </span>
  </label>
  <div
    calendar="day"
    id="txt2"
  >
    <header>
      <button
        aria-hidden="true"
        tabindex="-1"
      >
        December 2022
      </button>
    </header>
    <div>
      <div>
        <ul
          aria-hidden="true"
        >
          <li>
            Tu
          </li>
          <li>
            We
          </li>
          <li>
            Th
          </li>
          <li>
            Fr
          </li>
          <li>
            Sa
          </li>
          <li>
            Su
          </li>
          <li>
            Mo
          </li>
        </ul>
        <ol
          role="grid"
          style="overflow: hidden;"
        >
          <li
            prev=""
            role="gridcell"
          >
            29
          </li>
          <li
            prev=""
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            1
          </li>
          <li
            role="gridcell"
          >
            2
          </li>
          <li
            role="gridcell"
          >
            3
          </li>
          <li
            role="gridcell"
          >
            4
          </li>
          <li
            aria-selected="true"
            role="gridcell"
          >
            5
          </li>
          <li
            role="gridcell"
          >
            6
          </li>
          <li
            role="gridcell"
          >
            7
          </li>
          <li
            role="gridcell"
          >
            8
          </li>
          <li
            role="gridcell"
          >
            9
          </li>
          <li
            role="gridcell"
          >
            10
          </li>
          <li
            role="gridcell"
          >
            11
          </li>
          <li
            role="gridcell"
          >
            12
          </li>
          <li
            role="gridcell"
          >
            13
          </li>
          <li
            role="gridcell"
          >
            14
          </li>
          <li
            role="gridcell"
          >
            15
          </li>
          <li
            aria-current="date"
            role="gridcell"
          >
            16
          </li>
          <li
            role="gridcell"
          >
            17
          </li>
          <li
            role="gridcell"
          >
            18
          </li>
          <li
            role="gridcell"
          >
            19
          </li>
          <li
            role="gridcell"
          >
            20
          </li>
          <li
            role="gridcell"
          >
            21
          </li>
          <li
            role="gridcell"
          >
            22
          </li>
          <li
            role="gridcell"
          >
            23
          </li>
          <li
            role="gridcell"
          >
            24
          </li>
          <li
            role="gridcell"
          >
            25
          </li>
          <li
            role="gridcell"
          >
            26
          </li>
          <li
            role="gridcell"
          >
            27
          </li>
          <li
            role="gridcell"
          >
            28
          </li>
          <li
            role="gridcell"
          >
            29
          </li>
          <li
            role="gridcell"
          >
            30
          </li>
          <li
            role="gridcell"
          >
            31
          </li>
          <li
            next=""
            role="gridcell"
          >
            1
          </li>
          <li
            next=""
            role="gridcell"
          >
            2
          </li>
          <li
            next=""
            role="gridcell"
          >
            3
          </li>
          <li
            next=""
            role="gridcell"
          >
            4
          </li>
          <li
            next=""
            role="gridcell"
          >
            5
          </li>
          <li
            next=""
            role="gridcell"
          >
            6
          </li>
          <li
            next=""
            role="gridcell"
          >
            7
          </li>
          <li
            next=""
            role="gridcell"
          >
            8
          </li>
          <li
            next=""
            role="gridcell"
          >
            9
          </li>
        </ol>
      </div>
    </div>
  </div>
</wup-calendar>
`;

exports[`control.calendar utc=true month picker 1`] = `
<div
  calendar="month"
  id="txt2"
>
  <header>
    <button
      aria-hidden="true"
      tabindex="-1"
    >
      2022
    </button>
  </header>
  <div>
    <div>
      <ol
        role="grid"
        style="overflow: hidden;"
      >
        <li
          role="gridcell"
        >
          Jan
        </li>
        <li
          role="gridcell"
        >
          Feb
        </li>
        <li
          role="gridcell"
        >
          Mar
        </li>
        <li
          role="gridcell"
        >
          Apr
        </li>
        <li
          role="gridcell"
        >
          May
        </li>
        <li
          role="gridcell"
        >
          Jun
        </li>
        <li
          role="gridcell"
        >
          Jul
        </li>
        <li
          role="gridcell"
        >
          Aug
        </li>
        <li
          role="gridcell"
        >
          Sep
        </li>
        <li
          role="gridcell"
        >
          Oct
        </li>
        <li
          role="gridcell"
        >
          Nov
        </li>
        <li
          aria-current="date"
          aria-selected="true"
          role="gridcell"
        >
          Dec
        </li>
        <li
          next=""
          role="gridcell"
        >
          Jan
        </li>
        <li
          next=""
          role="gridcell"
        >
          Feb
        </li>
        <li
          next=""
          role="gridcell"
        >
          Mar
        </li>
        <li
          next=""
          role="gridcell"
        >
          Apr
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`control.calendar utc=true options min/max 1`] = `
[
  "26 disabled",
  "27 disabled",
  "28 disabled",
  "29 disabled",
  "30",
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "13",
  "14",
  "15",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "1",
  "2 disabled",
  "3 disabled",
  "4 disabled",
  "5 disabled",
  "6 disabled",
]
`;

exports[`control.calendar utc=true options min/max 2`] = `
[
  "31",
  "1",
  "2 disabled",
  "3 disabled",
  "4 disabled",
  "5 disabled",
  "6 disabled",
  "7 disabled",
  "8 disabled",
  "9 disabled",
  "10 disabled",
  "11 disabled",
  "12 disabled",
  "13 disabled",
  "14 disabled",
  "15 disabled",
  "16 disabled",
  "17 disabled",
  "18 disabled",
  "19 disabled",
  "20 disabled",
  "21 disabled",
  "22 disabled",
  "23 disabled",
  "24 disabled",
  "25 disabled",
  "26 disabled",
  "27 disabled",
  "28 disabled",
  "29 disabled",
  "30 disabled",
  "1 disabled",
  "2 disabled",
  "3 disabled",
  "4 disabled",
  "5 disabled",
  "6 disabled",
  "7 disabled",
  "8 disabled",
  "9 disabled",
  "10 disabled",
  "11 disabled",
]
`;

exports[`control.calendar utc=true options min/max 3`] = `
[
  "29 disabled",
  "30 disabled",
  "31 disabled",
  "1 disabled",
  "2 disabled",
  "3 disabled",
  "4 disabled",
  "5 disabled",
  "6 disabled",
  "7 disabled",
  "8 disabled",
  "9 disabled",
  "10 disabled",
  "11 disabled",
  "12 disabled",
  "13 disabled",
  "14 disabled",
  "15 disabled",
  "16 disabled",
  "17 disabled",
  "18 disabled",
  "19 disabled",
  "20 disabled",
  "21 disabled",
  "22 disabled",
  "23 disabled",
  "24 disabled",
  "25 disabled",
  "26 disabled",
  "27 disabled",
  "28 disabled",
  "29 disabled",
  "30",
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
]
`;

exports[`control.calendar utc=true year picker 1`] = `
<div
  calendar="year"
  id="txt2"
>
  <header>
    <button
      aria-hidden="true"
      disabled=""
      tabindex="-1"
    >
      2018 ... 2033
    </button>
  </header>
  <div>
    <div>
      <ol
        role="grid"
        style="overflow: hidden;"
      >
        <li
          aria-current="date"
          aria-selected="true"
          role="gridcell"
        >
          2018
        </li>
        <li
          role="gridcell"
        >
          2019
        </li>
        <li
          role="gridcell"
        >
          2020
        </li>
        <li
          role="gridcell"
        >
          2021
        </li>
        <li
          role="gridcell"
        >
          2022
        </li>
        <li
          role="gridcell"
        >
          2023
        </li>
        <li
          role="gridcell"
        >
          2024
        </li>
        <li
          role="gridcell"
        >
          2025
        </li>
        <li
          role="gridcell"
        >
          2026
        </li>
        <li
          role="gridcell"
        >
          2027
        </li>
        <li
          role="gridcell"
        >
          2028
        </li>
        <li
          role="gridcell"
        >
          2029
        </li>
        <li
          role="gridcell"
        >
          2030
        </li>
        <li
          role="gridcell"
        >
          2031
        </li>
        <li
          role="gridcell"
        >
          2032
        </li>
        <li
          role="gridcell"
        >
          2033
        </li>
      </ol>
    </div>
  </div>
</div>
`;
